--- a/public/template.htm
+++ b/public/template.htm
@@ -1621,7 +1621,7 @@ font-style:normal;mso-no-proof:yes'>पोलीस</span><span lang="HI" style=
 font-style:normal;mso-bidi-font-style:italic;mso-no-proof:yes'> </span><span lang="HI" style='font-size:11.0pt;line-height:115%;font-family:"Nirmala UI",sans-serif;
 mso-bidi-language:HI;font-style:normal;mso-no-proof:yes'>स्टेशन</span><span lang="EN-US" style='font-size:11.0pt;line-height:115%;font-family:"Nirmala UI",sans-serif;
 font-style:normal;mso-bidi-font-style:italic;mso-no-proof:yes'>, </span><span lang="HI" style='font-size:11.0pt;line-height:115%;font-family:"Nirmala UI",sans-serif;
-mso-bidi-language:HI;font-style:normal;mso-no-proof:yes'>पाचोड</span><span lang="HI" style='font-size:11.0pt;line-height:115%;font-family:"Nirmala UI",sans-serif;
+mso-bidi-language:HI;font-style:normal;mso-no-proof:yes'>{{station}}</span><span lang="HI" style='font-size:11.0pt;line-height:115%;font-family:"Nirmala UI",sans-serif;
 font-style:normal;mso-bidi-font-style:italic;mso-no-proof:yes'> <span style="mso-spacerun:yes"> </span></span><span
         lang="EN-US" style='font-size:11.0pt;
 line-height:115%;font-family:"Nirmala UI",sans-serif;font-style:normal;
